- Add missing snippets for se/config - Fix xml snippets indentation - Fix usage of [source,java] (remove spaces or capitalization)